# name: TestDatabase.test_serialize_database_no_person_on_events
  '
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "override",
              "type": "lazy_table",
              "table": "person_overrides"
          },
          {
              "key": "override_person_id",
              "type": "field_traverser",
              "chain": [
                  "override",
                  "override_person_id"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_recording_events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "window_id",
              "type": "string"
          },
          {
              "key": "snapshot_data",
              "type": "json"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "has_full_snapshot",
              "type": "boolean"
          },
          {
              "key": "events_summary",
              "type": "json"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "timestamps_summary",
              "type": "datetime"
          },
          {
              "key": "first_event_timestamp",
              "type": "datetime"
          },
          {
              "key": "last_event_timestamp",
              "type": "datetime"
          },
          {
              "key": "urls",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "raw_session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "raw_person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "raw_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          },
          {
              "key": "sign",
              "type": "integer"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ]
  }
  '
---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "override",
              "type": "lazy_table",
              "table": "person_overrides"
          },
          {
              "key": "override_person_id",
              "type": "field_traverser",
              "chain": [
                  "override",
                  "override_person_id"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "poe"
              ]
          },
          {
              "key": "person_id",
              "type": "string"
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_recording_events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "window_id",
              "type": "string"
          },
          {
              "key": "snapshot_data",
              "type": "json"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "has_full_snapshot",
              "type": "boolean"
          },
          {
              "key": "events_summary",
              "type": "json"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "timestamps_summary",
              "type": "datetime"
          },
          {
              "key": "first_event_timestamp",
              "type": "datetime"
          },
          {
              "key": "last_event_timestamp",
              "type": "datetime"
          },
          {
              "key": "urls",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          }
      ],
      "raw_session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids"
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "raw_person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "raw_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons"
          },
          {
              "key": "sign",
              "type": "integer"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ]
  }
  '
---
